# PyFEM

./: .coveragerc  .gitignore  AGENTS.md  INPUT_FORMAT.md  README.md  README_REVIEW.md  agent.md  batch_input.txt  cli.py  condition_case.yaml  dataset_config.yaml  diagnose_fem.py  dynamic_loads.txt  generate_fem_demo.py  load_template.yaml  materials.csv  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  run_condition_prediction.py  static_input.txt  static_loads.txt  structure.yaml  structure_input.txt
.planning/: STATE.md  roadmap.md
Condition_prediction/: __init__.py
Deep_learning/: __init__.py  train.py  train_pinn_v2.py
PyFEM_Dynamics/: main.py
configs/: condition_case.yaml  dataset_config.yaml
dataset/: damage_Y.npy  sensor_X.npy
deep_learning/: train.py
docs/: fem_dev_process_blog.md  research_protocol_upgrade.md  supervisor_report.md
notebooks/: 01_structure_explorer.ipynb  02_dataset_overview.ipynb  03_fem_simulation.ipynb  04_model_training_history.ipynb  05_damage_prediction.ipynb  06_model_comparison.ipynb  07_stress_analysis.ipynb  08_interactive_dashboard.ipynb
scripts/: 01_prerequisites_test.bat  01_prerequisites_test.ps1  01_prerequisites_test.sh  02_generate_dataset.bat  02_generate_dataset.ps1  02_generate_dataset.sh  03_train_gt.bat  03_train_gt.ps1  03_train_gt.sh  04_train_pinn.bat  04_train_pinn.ps1  04_train_pinn.sh  05_train_all.bat  05_train_all.ps1  05_train_all.sh  06_run_prediction.bat  06_run_prediction.ps1  06_run_prediction.sh  07_run_full_pipeline.bat  07_run_full_pipeline.ps1  07_run_full_pipeline.sh  08_check_status.bat  (+6 more)
(+151 files in other folders)
